# tensorboard

./: .travis.yml  WORKSPACE  network_test.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
ci/: requirements.txt  requirements_dev.txt
tensorboard/: BUILD  __init__.py  dataclass_compat.py  default.py  default_test.py  lazy_test.py  main.py  manager_e2e_test.py  manager_test.py  notebook.py  program.py  program_test.py  version.py
tensorboard/backend/: application.py  application_test.py  http_util.py  http_util_test.py  security_validator_test.py
tensorboard/backend/event_processing/: BUILD  data_provider.py  data_provider_test.py  directory_loader_test.py  event_multiplexer.py  plugin_event_accumulator.py  plugin_event_accumulator_test.py  plugin_event_multiplexer.py  plugin_event_multiplexer_test.py
tensorboard/compat/: __init__.py
tensorboard/compat/proto/: summary.proto
tensorboard/compat/tensorflow_stub/: errors.py  pywrap_tensorflow.py
tensorboard/data/: BUILD  grpc_provider.py  provider.py  provider_test.py
tensorboard/data/server/: BUILD  Cargo.toml  DEVELOPMENT.md  build_protos.rs  lib.rs  main.rs  masked_crc.rs  rustboard_core_doc_server.py  tf_record.rs
tensorboard/defs/: web_testing.bzl
tensorboard/pip_package/: test_pip_package.sh
tensorboard/plugins/: base_plugin.py
tensorboard/tools/: diagnose_tensorboard.py
tensorboard/uploader/: exporter.py  exporter_test.py  server_info_test.py  uploader_main.py  uploader_test.py  util.py  util_test.py
tensorboard/util/: grpc_util_test.py
(+50 files in other folders)
