[package]
name = "rustboard"
version = "0.1.0"
authors = ["William Chargin <wchargin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"

[[bin]]
name = "rustboard"
path = "main.rs"

[lib]
name = "rustboard_core"
path = "lib.rs"

[raze]
workspace_path = "//third_party/rust"
genmode = "Remote"
