[package]
name = "rustboard"
version = "0.1.0"
authors = ["William Chargin <wchargin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
crc = "1.8.1"
thiserror = "1.0.21"

# 0.6.1 stable release depends on compile time PROTOC
prost-build = { git = "https://github.com/danburkert/prost.git", rev = "4ded4a98ef339da0b7babd4efee3fbe8adaf746b" }

[[bin]]
name = "rustboard"
path = "main.rs"

[lib]
name = "rustboard_core"
path = "lib.rs"

[raze]
workspace_path = "//third_party/rust"
genmode = "Remote"

[raze.crates.crc.'1.8.1']
gen_buildrs = true

[raze.crates.thiserror.'1.0.21']
gen_buildrs = true

[raze.crates.proc-macro2.'1.0.24']
additional_flags = [
    "--cfg=use_proc_macro",
    "--cfg=wrap_proc_macro",
]

[raze.crates.prost-build.'0.6.1']
gen_buildrs = true

[raze.crates.indexmap.'1.6.0']
additional_flags = [
    "--cfg=has_std",
]
